typescript/checker/tests/conformance/es6/yieldExpressions/generatorTypeCheck3.ts.stderr
error: unimplemented
expand_export_info(IterableIterator)
File: $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck3.ts
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck3.ts:2:1
  |
2 | function* g1(): IterableIterator<string> { }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            56,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck3.ts:2:15
  |
2 | function* g1(): IterableIterator<string> { }
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^

